syntax = "proto3";

package nextdate;

option go_package = "github.com/Vova4o/todogrpc/nextdate/proto";

message NextDateRequest {
    string now = 1;
    string date = 2;
    string repeat = 3;
}

message NextDateResponse {
    string date = 1;
}

service NextDateService {
    rpc NextDate(NextDateRequest) returns (NextDateResponse);
}